--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-home fade-in">
+
 <header>
   <div class="nav-container">
     <div class="brand-area">Ohad’s WeCode</div>
@@ -21,17 +22,17 @@
 </header>
 
 <main class="page-content">
-  <!-- HERO -->
+  <!-- HERO SECTION -->
   <section class="hero-section card slide-up">
     <h1 class="hero-title">Welcome to WeCode</h1>
     <p class="hero-subtitle">
-      Elevate Your C++ Skills with advanced modules, real-time progress,
+      Elevate Your C++ Skills with advanced modules, real-time progress, 
       integrated quizzes, and a top-tier UI experience.
     </p>
     <a href="exercises.html" class="btn">Get Started</a>
   </section>
 
-  <!-- FEATURES -->
+  <!-- FEATURES SECTION -->
   <section class="features fade-in">
     <div class="feature-card card">
       <h2>Robust Syllabus</h2>
@@ -47,7 +48,7 @@
     </div>
   </section>
 
-  <!-- CTA -->
+  <!-- CTA SECTION -->
   <section class="cta card fade-in">
     <h2>Prepare for Your Next Interview</h2>
     <p class="cta-desc">
@@ -60,6 +61,7 @@
 <footer>
   © 2025 Ohad’s WeCode. All rights reserved.
 </footer>
+
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 </body>
