--- a/portfolio.html
+++ b/portfolio.html
@@ -5,21 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohad’s WeCode | Portfolio</title>
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-portfolio fade-in">
+
 <header>
   <div class="nav-container">
-    <div class="brand-area">
-      <span class="brand-title">Ohad’s WeCode</span>
-    </div>
-
-    <div class="menu-toggle" id="menuToggle">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-    <ul class="nav-menu" id="navMenu">
+    <div class="brand-area">Ohad’s WeCode</div>
+    <ul class="nav-menu">
       <li><a href="index.html" class="nav-link">Home</a></li>
       <li><a href="exercises.html" class="nav-link">Exercises</a></li>
       <li><a href="progress.html" class="nav-link">Progress</a></li>
@@ -30,15 +22,16 @@
 </header>
 
 <main class="page-content">
-  <h1 class="fancy-title">Meet the Developer</h1>
-  <p style="max-width:800px; margin:0 auto 30px; text-align:center;">
+  <h1>Meet the Developer</h1>
+  <p>
     Hello, I’m <strong>Ohad</strong>, an RT Embedded Engineer specializing in C/C++ on Linux.
     This platform is my advanced learning and portfolio demonstration—bridging
     real-time embedded topics with modern C++ for a professional, interview-focused skill set.
   </p>
 
-  <div style="display:flex; flex-wrap:wrap; gap:24px; justify-content:center;">
-    <div class="glass card-hover" style="width:300px; padding:16px;">
+  <!-- Row of highlight cards -->
+  <div class="cards-row fade-in">
+    <div class="card" style="width:280px;">
       <h2>Background</h2>
       <ul style="margin-left:20px;">
         <li>B.Sc. in Computer Science / Electronics Engineering</li>
@@ -46,8 +39,7 @@
         <li>Expert in real-time systems &amp; OS internals</li>
       </ul>
     </div>
-
-    <div class="glass card-hover" style="width:300px; padding:16px;">
+    <div class="card" style="width:280px;">
       <h2>Focus Areas</h2>
       <ul style="margin-left:20px;">
         <li>Low-level C/C++ programming</li>
@@ -55,8 +47,7 @@
         <li>Performance tuning &amp; memory optimization</li>
       </ul>
     </div>
-
-    <div class="glass card-hover" style="width:300px; padding:16px;">
+    <div class="card" style="width:280px;">
       <h2>Project Goals</h2>
       <ul style="margin-left:20px;">
         <li>Advanced modules for challenging C++ interviews</li>
@@ -66,27 +57,29 @@
     </div>
   </div>
 
-  <div style="text-align:center; margin-top:40px;">
+  <!-- Resume Button/Icon -->
+  <div class="resume-btn fade-in">
     <p style="margin-bottom:10px;">Check out my detailed CV/Resume:</p>
-    <a href="resume.html" class="icon-btn" title="View Resume">
-      <!-- Example "file" icon (Simple Icons) -->
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/file.svg" alt="Resume Icon" style="width:24px;height:24px;">
-    </a>
+    <!-- A big neon-glow button or an icon -->
+    <a href="resume.html" class="btn">View Resume</a>
   </div>
 
+  <!-- GitHub / LinkedIn icons with spacing & neon on hover -->
   <div style="text-align:center; margin-top:30px;">
     <p style="margin-bottom:10px;">Connect with me on GitHub &amp; LinkedIn:</p>
     <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn" title="GitHub">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/github.svg" alt="GitHub" style="width:24px;height:24px;">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/github.svg" alt="GitHub">
     </a>
     <a href="https://www.linkedin.com/in/ohad-alon" target="_blank" class="icon-btn" title="LinkedIn">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/linkedin.svg" alt="LinkedIn" style="width:24px;height:24px;">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@5.24.0/icons/linkedin.svg" alt="LinkedIn">
     </a>
   </div>
 </main>
 
-<footer></footer>
-<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
+<footer>
+  © 2025 Ohad’s WeCode. All rights reserved.
+</footer>
+
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 </body>
