--- a/resume.html
+++ b/resume.html
@@ -5,21 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohad’s WeCode | Resume</title>
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-resume fade-in">
+
 <header>
   <div class="nav-container">
-    <div class="brand-area">
-      <span class="brand-title">Ohad’s WeCode</span>
-    </div>
-
-    <div class="menu-toggle" id="menuToggle">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-    <ul class="nav-menu" id="navMenu">
+    <div class="brand-area">Ohad’s WeCode</div>
+    <ul class="nav-menu">
       <li><a href="index.html" class="nav-link">Home</a></li>
       <li><a href="exercises.html" class="nav-link">Exercises</a></li>
       <li><a href="progress.html" class="nav-link">Progress</a></li>
@@ -30,93 +22,104 @@
 </header>
 
 <main class="page-content">
-  <section class="resume-section glass" style="max-width:900px; margin:0 auto; padding:30px;">
-    <h2 class="fancy-title">Ohad Alon - Resume</h2>
-    <div class="contact-info" style="margin-bottom:20px;">
-      <p><strong>Location:</strong> Herzliya, Israel</p>
-      <p><strong>Phone:</strong> +972-53-2428862</p>
-      <p><strong>Email:</strong> <a href="mailto:alonohad100@gmail.com">alonohad100@gmail.com</a></p>
-    </div>
+  <h1>Resume - Ohad Alon</h1>
+  <p style="max-width:700px; margin:0 auto 20px; text-align:center;">
+    A concise overview of my expertise in embedded systems, real-time programming, 
+    and modern C++ development. 
+  </p>
 
-    <h3 style="margin-top:1.5em;">Profile</h3>
-    <p style="margin-bottom:1.2em;">
+  <!-- Contact Info Card -->
+  <section class="card fade-in" style="max-width:600px; margin:20px auto;">
+    <h2 style="margin-bottom:0.5em;">Contact Info</h2>
+    <p><strong>Location:</strong> Herzliya, Israel</p>
+    <p><strong>Phone:</strong> +972-53-2428862</p>
+    <p><strong>Email:</strong> <a href="mailto:alonohad100@gmail.com">alonohad100@gmail.com</a></p>
+  </section>
+
+  <!-- Profile Card -->
+  <section class="card fade-in" style="max-width:800px; margin:20px auto;">
+    <h2 style="margin-bottom:0.5em;">Profile</h2>
+    <p>
       Accomplished Senior Embedded Software Developer with extensive experience
       designing real-time systems, optimizing embedded software architectures, 
-      and delivering reliable, innovative solutions for complex projects. 
-      Demonstrates expertise in cybersecurity protocols, AI integration, and mentoring
-      diverse teams.
+      and delivering reliable, innovative solutions for complex projects.
+      Demonstrates expertise in cybersecurity protocols, AI integration, 
+      and mentoring diverse teams.
     </p>
-    <hr style="margin:1.2em 0;"/>
+  </section>
 
-    <h3 style="margin-top:1.5em;">Work Experience</h3>
-    <article class="job" style="margin-bottom:1.5em;">
-      <h4>Senior Software Developer - CYMOTIVE Technologies (02/2022 – present)</h4>
+  <!-- Work Experience -->
+  <section class="card fade-in" style="max-width:900px; margin:20px auto;">
+    <h2 style="margin-bottom:0.5em;">Work Experience</h2>
+
+    <article style="margin-bottom:1em;">
+      <h3>Senior Software Developer - CYMOTIVE Technologies (02/2022 – present)</h3>
       <ul style="margin-left:20px;">
         <li>Designed secure communication protocols with cryptographic solutions.</li>
         <li>Overhauled software architecture for improved data flow efficiency and scalability.</li>
         <li>Developed advanced support tools simplifying diagnostic workflows.</li>
-        <li>Collaborated with stakeholders to translate technical requirements into functional designs.</li>
+        <li>Collaborated with stakeholders to translate technical requirements into designs.</li>
       </ul>
     </article>
 
-    <article class="job" style="margin-bottom:1.5em;">
-      <h4>Software Developer - Brodmann17 (01/2021 – 02/2022)</h4>
+    <article style="margin-bottom:1em;">
+      <h3>Software Developer - Brodmann17 (01/2021 – 02/2022)</h3>
       <ul style="margin-left:20px;">
-        <li>Led AI solution development, improving object detection accuracy in automotive applications.</li>
+        <li>Led AI solutions for automotive object detection, improving accuracy and speed.</li>
         <li>Optimized algorithms for real-time performance under demanding conditions.</li>
         <li>Integrated AI capabilities into client platforms, enhancing reliability.</li>
-        <li>Coordinated teams to meet strict deadlines, achieving consistent project success.</li>
       </ul>
     </article>
 
-    <article class="job" style="margin-bottom:1.5em;">
-      <h4>Senior Embedded Software Developer - Ceragon Networks (11/2016 – 01/2021)</h4>
+    <article style="margin-bottom:1em;">
+      <h3>Senior Embedded Software Developer - Ceragon Networks (11/2016 – 01/2021)</h3>
       <ul style="margin-left:20px;">
         <li>Architected embedded software solutions for advanced telecommunications systems.</li>
         <li>Developed task-scheduling mechanisms for better resource utilization.</li>
-        <li>Resolved complex interoperability issues between software and hardware components.</li>
         <li>Provided mentorship to junior developers, fostering a learning culture.</li>
       </ul>
     </article>
 
-    <article class="job" style="margin-bottom:1.5em;">
-      <h4>Software Developer - Experis Israel (04/2016 – 10/2016)</h4>
+    <article>
+      <h3>Software Developer - Experis Israel (04/2016 – 10/2016)</h3>
       <ul style="margin-left:20px;">
         <li>Developed efficient embedded software under strict deadlines.</li>
         <li>Specialized in low-level C programming and real-time debugging tools.</li>
       </ul>
     </article>
-    <hr style="margin:1.2em 0;"/>
+  </section>
 
-    <h3 style="margin-top:1.5em;">Education</h3>
-    <article class="education" style="margin-bottom:1.5em;">
-      <h4>Bachelor’s in Electrical and Electronics Engineering - Ruppin Academic Center (2010–2014)</h4>
+  <!-- Education Card -->
+  <section class="card fade-in" style="max-width:900px; margin:20px auto;">
+    <h2 style="margin-bottom:0.5em;">Education</h2>
+    <h3>Bachelor’s in Electrical and Electronics Engineering - Ruppin (2010–2014)</h3>
+    <ul style="margin-left:20px;">
+      <li>Designed an embedded system focusing on energy efficiency.</li>
+      <li>Excelled in embedded design, signal processing, and low-level software engineering.</li>
+    </ul>
+  </section>
+
+  <!-- Key Projects & Skills in 2 separate cards, or combine them -->
+  <section class="card fade-in" style="max-width:900px; margin:20px auto;">
+    <h2 style="margin-bottom:0.5em;">Key Projects</h2>
+    <article style="margin-bottom:1em;">
+      <h3>Automotive Cybersecurity Framework</h3>
       <ul style="margin-left:20px;">
-        <li>Designed an embedded system for data acquisition, focusing on energy efficiency.</li>
-        <li>Excelled in embedded systems design, signal processing, and low-level software engineering.</li>
+        <li>Implemented secure communication for automotive systems.</li>
+        <li>Deployed diagnostic tools to address operational bottlenecks.</li>
       </ul>
     </article>
-    <hr style="margin:1.2em 0;"/>
-
-    <h3 style="margin-top:1.5em;">Key Projects</h3>
-    <article class="project" style="margin-bottom:1.2em;">
-      <h4>Automotive Cybersecurity Framework</h4>
+    <article>
+      <h3>AI-Based Automotive Object Detection</h3>
       <ul style="margin-left:20px;">
-        <li>Implemented secure communication mechanisms for automotive systems.</li>
-        <li>Deployed diagnostic tools addressing operational bottlenecks.</li>
-      </ul>
-    </article>
-
-    <article class="project" style="margin-bottom:1.2em;">
-      <h4>AI-Based Automotive Object Detection</h4>
-      <ul style="margin-left:20px;">
-        <li>Integrated AI-driven object detection solutions into client systems.</li>
+        <li>Integrated AI-driven detection solutions into client systems.</li>
         <li>Improved detection accuracy and performance in real-world scenarios.</li>
       </ul>
     </article>
-    <hr style="margin:1.2em 0;"/>
+  </section>
 
-    <h3 style="margin-top:1.5em;">Skills</h3>
+  <section class="card fade-in" style="max-width:900px; margin:20px auto;">
+    <h2 style="margin-bottom:0.5em;">Skills</h2>
     <ul style="margin-left:20px;">
       <li><strong>Embedded Systems:</strong> Real-Time OS, Hardware-Software Integration</li>
       <li><strong>Languages:</strong> C, C++ (English/Hebrew speaking)</li>
@@ -128,8 +131,10 @@
   </section>
 </main>
 
-<footer></footer>
-<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
+<footer>
+  © 2025 Ohad’s WeCode. All rights reserved.
+</footer>
+
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 </body>
