refactor: improve HTML structure, enhance breadcrumb styling, and update content clarity

--- a/exercises.html
+++ b/exercises.html
@@ -23,56 +23,54 @@
 
 <main class="page-content">
   <h1>Advanced C++ Interview Syllabus</h1>
-  <p style="text-align:center; max-width:800px; margin:0 auto 30px;">
+  <p class="subtitle">
     Explore interactive modules below for real-world tasks, timelines, and integrated code practice.
   </p>
 
-  <!-- A grid of module "cards" for a more interesting layout -->
-  <div class="modules-grid">
-    <!-- Module 1 -->
+  <div class="modules-grid fade-in">
+    <!-- Each module is a "sticky note" card with random rotation from style.css -->
     <div class="course-module card">
-      <h2>Module 1: Foundations &amp; Modern C++</h2>
-      <p>RAII, smart pointers, lambdas, best practices.</p>
-      <a href="module1.html" class="btn">Go to Module 1</a>
+      <h2>Module 1</h2>
+      <p>Foundations &amp; Modern C++</p>
+      <a href="module1.html" class="btn">Go</a>
     </div>
-    <!-- Module 2 -->
+
     <div class="course-module card">
-      <h2>Module 2: Data Structures &amp; Algorithms</h2>
-      <p>Arrays, linked lists, BFS/DFS, sorting & searching.</p>
-      <a href="module2.html" class="btn">Go to Module 2</a>
+      <h2>Module 2</h2>
+      <p>Data Structures &amp; Algorithms</p>
+      <a href="module2.html" class="btn">Go</a>
     </div>
-    <!-- Module 3 -->
+
     <div class="course-module card">
-      <h2>Module 3: Real-Time &amp; Embedded</h2>
-      <p>RTOS fundamentals, concurrency, debugging, interrupts.</p>
-      <a href="module3.html" class="btn">Go to Module 3</a>
+      <h2>Module 3</h2>
+      <p>Real-Time &amp; Embedded</p>
+      <a href="module3.html" class="btn">Go</a>
     </div>
-    <!-- Module 4 -->
+
     <div class="course-module card">
-      <h2>Module 4: Concurrency &amp; Multithreading</h2>
-      <p>Threads, mutexes, lock-free, concurrency patterns.</p>
-      <a href="module4.html" class="btn">Go to Module 4</a>
+      <h2>Module 4</h2>
+      <p>Concurrency &amp; Multithreading</p>
+      <a href="module4.html" class="btn">Go</a>
     </div>
-    <!-- Module 5 -->
+
     <div class="course-module card">
-      <h2>Module 5: Memory &amp; Debugging</h2>
-      <p>Manual &amp; smart pointers, custom allocators, debug tools.</p>
-      <a href="module5.html" class="btn">Go to Module 5</a>
+      <h2>Module 5</h2>
+      <p>Memory &amp; Debugging</p>
+      <a href="module5.html" class="btn">Go</a>
     </div>
-    <!-- Module 6 -->
+
     <div class="course-module card">
-      <h2>Module 6: Templates &amp; Metaprogramming</h2>
-      <p>SFINAE, type traits, compile-time programming.</p>
-      <a href="module6.html" class="btn">Go to Module 6</a>
+      <h2>Module 6</h2>
+      <p>Templates &amp; Metaprogramming</p>
+      <a href="module6.html" class="btn">Go</a>
     </div>
-    <!-- Module 7 -->
+
     <div class="course-module card">
-      <h2>Module 7: System Design &amp; Advanced</h2>
-      <p>Design patterns, high-level architecture, interview scenarios.</p>
-      <a href="module7.html" class="btn">Go to Module 7</a>
+      <h2>Module 7</h2>
+      <p>System Design &amp; Advanced</p>
+      <a href="module7.html" class="btn">Go</a>
     </div>
   </div>
-
 </main>
 
 <footer>
