--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-portfolio fade-in">
-
 <header>
   <div class="nav-container">
     <div class="brand-area">Ohad’s WeCode</div>
@@ -29,7 +28,6 @@
     real-time embedded topics with modern C++ for a professional, interview-focused skill set.
   </p>
 
-  <!-- Row of highlight cards -->
   <div class="cards-row fade-in">
     <div class="card" style="width:280px;">
       <h2>Background</h2>
@@ -57,14 +55,13 @@
     </div>
   </div>
 
-  <!-- Resume Button/Icon -->
+  <!-- Resume Button -->
   <div class="resume-btn fade-in">
     <p style="margin-bottom:10px;">Check out my detailed CV/Resume:</p>
-    <!-- A big neon-glow button or an icon -->
     <a href="resume.html" class="btn">View Resume</a>
   </div>
 
-  <!-- GitHub / LinkedIn icons with spacing & neon on hover -->
+  <!-- GitHub / LinkedIn icons with bigger glow on hover -->
   <div style="text-align:center; margin-top:30px;">
     <p style="margin-bottom:10px;">Connect with me on GitHub &amp; LinkedIn:</p>
     <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn" title="GitHub">
