--- a/progress.html
+++ b/progress.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-progress fade-in">
-
 <header>
   <div class="nav-container">
     <div class="brand-area">Ohad’s WeCode</div>
@@ -23,7 +22,8 @@
 
 <main class="page-content">
   <h1>Your Learning Journey</h1>
-  <!-- The radial progress indicator inside a card for neon glow -->
+
+  <!-- The radial progress indicator in a neon-glow card -->
   <section class="card fade-in" style="text-align:center; max-width:500px; margin:0 auto;">
     <p style="margin-bottom: 20px;">
       Track your completed lessons. The radial ring below fills up as you
@@ -42,7 +42,7 @@
       <p id="quizzes-count">0</p>
     </div>
     <div class="stats-card card">
-      <h3>Total Modules Unlocked</h3>
+      <h3>Unlocked Modules</h3>
       <p id="modules-unlocked">2</p>
     </div>
     <div class="stats-card card">
@@ -58,7 +58,6 @@
 
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
-<!-- The progress logic you had (progress.js) -->
 <script src="scripts/progress.js"></script>
 </body>
 </html>
