--- a/resources.html
+++ b/resources.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-resources fade-in">
+
 <header>
   <div class="nav-container">
     <div class="brand-area">Ohad’s WeCode</div>
@@ -22,7 +23,7 @@
 
 <main class="page-content">
   <h1>Learning Resources</h1>
-  <p style="text-align:center; max-width:700px; margin: 0 auto 30px;">
+  <p class="subtitle">
     Explore curated references, tutorials, and external links to deepen
     your understanding of modern C++ and related fields.
   </p>
@@ -31,32 +32,32 @@
     <div class="resource-card card">
       <h2>cppreference.com</h2>
       <p>Comprehensive documentation on C++ language features and the standard library.</p>
-      <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit Site</a>
+      <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit</a>
     </div>
     <div class="resource-card card">
       <h2>isocpp.org</h2>
       <p>Official C++ standardization updates, guidelines, and community news.</p>
-      <a href="https://isocpp.org" target="_blank" class="btn">View Site</a>
+      <a href="https://isocpp.org" target="_blank" class="btn">Visit</a>
     </div>
     <div class="resource-card card">
       <h2>Learn C++</h2>
-      <p>Advanced tutorials, best practices, and in-depth articles on C++ programming.</p>
-      <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit Site</a>
+      <p>Advanced tutorials, best practices, and in-depth articles on modern C++.</p>
+      <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit</a>
     </div>
     <div class="resource-card card">
       <h2>Boost Libraries</h2>
       <p>Peer-reviewed portable C++ source libraries, widely used in industry.</p>
-      <a href="https://www.boost.org/" target="_blank" class="btn">Explore Boost</a>
+      <a href="https://www.boost.org/" target="_blank" class="btn">Visit</a>
     </div>
     <div class="resource-card card">
       <h2>Embedded Artistry</h2>
       <p>Articles, tips, and best practices for embedded C++ development.</p>
-      <a href="https://embeddedartistry.com/" target="_blank" class="btn">Visit Site</a>
+      <a href="https://embeddedartistry.com/" target="_blank" class="btn">Visit</a>
     </div>
     <div class="resource-card card">
-      <h2>C++ Weekly (YouTube)</h2>
-      <p>Jason Turner's popular channel focusing on modern C++ tips and tricks.</p>
-      <a href="https://www.youtube.com/c/lefticus1" target="_blank" class="btn">Watch Channel</a>
+      <h2>C++ Weekly</h2>
+      <p>Jason Turner's popular YouTube channel for modern C++ techniques.</p>
+      <a href="https://www.youtube.com/c/lefticus1" target="_blank" class="btn">Visit</a>
     </div>
   </div>
 </main>
@@ -64,6 +65,7 @@
 <footer>
   © 2025 Ohad’s WeCode. All rights reserved.
 </footer>
+
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 </body>
